# ShapeQuantifierExtension

./: CMakeLists.txt  README.md
AnglePlanes/: AnglePlanes.py  CMakeLists.txt
EasyClip/: CMakeLists.txt  EasyClip.py
LongitudinalQuantification/: CMakeLists.txt  LongitudinalQuantification.py
LongitudinalQuantification/Resources/UI/: LongitudinalQuantification.ui
MeshStatistics/: CMakeLists.txt  MeshStatistics.py
PickAndPaint/: CMakeLists.txt  PickAndPaint.py
PythonLibrairies/: CMakeLists.txt  DCBIA.py  DCBIALogic.py  LongitudinalQuantificationCore.py  ShapeQuantifierCore.py
Q3DC/: CMakeLists.txt  Q3DC.py
ShapeQuantifier/: CMakeLists.txt  ShapeQuantifier.py
ShapeQuantifier/Resources/UI/: ShapeQuantifier.ui
